[metadata]
name = pytesseract
version = 0.3.7
author = Samuel Hoffstaetter
author_email = samuel@hoffstaetter.com
maintainer = Matthias Lee
maintainer_email = pytesseract@madmaze.net
description = Python-tesseract is a python wrapper for Google's Tesseract-OCR
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
license_file = LICENSE
keywords = python-tesseract OCR Python
url = https://github.com/madmaze/pytesseract
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires = Pillow
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pytesseract = pytesseract.pytesseract:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
