[metadata]
name = pytesseract
version = attr: pytesseract.__version__
author = Samuel Hoffstaetter
author_email = samuel@hoffstaetter.com
maintainer = Matthias Lee
maintainer_email = pytesseract@madmaze.net
description = Python-tesseract is a python wrapper for Google's Tesseract-OCR
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
license_file = LICENSE
keywords = python-tesseract OCR Python
url = https://github.com/madmaze/pytesseract
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
include_package_data = True
install_requires =
    packaging>=21.3
    Pillow>=8.0.0

python_requires = >=3.7

[options.entry_points]
console_scripts =
    pytesseract = pytesseract.pytesseract:main

[options.packages.find]
exclude =
    tests*
    testing*
