[metadata]
name = pytesseract
version = attr: pytesseract.__version__
description = Python-tesseract is a python wrapper for Google's Tesseract-OCR
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/madmaze/pytesseract
author = Samuel Hoffstaetter
author_email = samuel@hoffstaetter.com
maintainer = Matthias Lee
maintainer_email = pytesseract@madmaze.net
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = python-tesseract OCR Python

[options]
packages = find:
install_requires =
    Pillow>=8.0.0
    packaging>=21.3
python_requires = >=3.9
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pytesseract = pytesseract.pytesseract:main
